# webAssembly

./: .gitignore  package-lock.json  package.json  webpack.config.js
cpp/: CMakeLists.txt  Makefile  bearing.cpp  fft.cpp  finish.sh  main.cpp
cpp/utils/: build.cmd  build.sh  id_rsa.emscripten  id_rsa.emscripten.pub
src/: demo.js  index.js
src/wasm/: bearing_wasm.js  fft_wasm.js
